[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ChatBox.gd" type="Script" id=1]
[ext_resource path="res://sprites/theme_of_themes.tres" type="Theme" id=2]

[node name="ChatBox" type="Control"]
margin_left = 32.0
margin_top = 104.0
margin_right = 256.0
margin_bottom = 216.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = -16.0
margin_right = 224.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLog" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 224.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 224.0
margin_bottom = 128.0
size_flags_horizontal = 3
placeholder_text = "Yo we got chat in here :)"
placeholder_alpha = 0.251

[node name="ChatSweeper" type="Timer" parent="VBoxContainer"]

[connection signal="text_entered" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
